Update job to skip namespaces that do not exist

--- a/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
+++ b/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
@@ -46,7 +46,15 @@ spec:
 
             for NAMESPACE in ${NAMESPACES//,/ }
             do
-              echo "Creating secret for $NAMESPACES"
+              echo "Creating secret for $NAMESPACE"
+              if [[ `oc get namespace $NAMESPACE 2>/dev/null` ]] ;
+              then
+                  echo "Namespace $NAMESPACE exists, checking secret..."
+              else
+                  echo "Namespace $NAMESPACE doesn't exist, skipping"
+                  continue
+              fi
+
               # If secret already exists, don't regenerate.
               if [[ -n `oc get secret roxsecrets -n $NAMESPACE 2>/dev/null` ]] ;
               then
