Fix demo-users-rolebinding typo

--- a/tenants/demo/namespaces/base/kustomization.yaml
+++ b/tenants/demo/namespaces/base/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
 - ../../../../components/apps/tenant-namespace/overlays/gitops
 - ../../../defaults/networkpolicy/base
 - demo-admins-rolebinding.yaml
-- demo-rolebinding.yaml
+- demo-users-rolebinding.yaml
