Add petclinic namespace to demo

--- a/tenants/demo/argocd/root/base/values.yaml
+++ b/tenants/demo/argocd/root/base/values.yaml
@@ -73,3 +73,9 @@ applications:
       namespace: demo-prod
     source:
       path: tenants/demo/namespaces/overlays/prod
+
+  demo-petclinic:
+    destination:
+      namespace: demo-petclinic
+    source:
+      path: tenants/demo/namespaces/overlays/petclinic      
