--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -148,6 +148,15 @@ applications:
           jsonPointers:
           - /spec/rules
 
+  kyverno-acm:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '21'
+    destination:
+      namespace: acm-policies
+    source:
+      path: components/apps/kyverno-acm/base
+
   product-catalog-root:
     project: cluster-config
     annotations:
