--- a/components/apps/kyverno-acm/base/placementrule.yaml
+++ b/components/apps/kyverno-acm/base/placementrule.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: placement-policy-kyverno
+  name: kyverno
 spec:
   clusterConditions:
   - status: "True"
