--- a/components/apps/kyverno-acm/base/generate/best-practices-policyGenerator.yaml
+++ b/components/apps/kyverno-acm/base/generate/best-practices-policyGenerator.yaml
@@ -35,6 +35,54 @@ policies:
   disabled: false
   manifests:
     - path: policies/require-requests-limits-policy.yaml
+- name: application-field-validation
+  categories:
+    - setup
+  controls: 
+    - setup
+  disabled: false
+  manifests:
+    - path: policies/application-field-validation.yaml
+- name: application-prevent-default-project
+  categories:
+    - setup
+  controls: 
+    - setup
+  disabled: false
+  manifests:
+    - path: policies/application-prevent-default-project.yaml
+- name: check-deprecated-apis
+  categories:
+    - setup
+  controls: 
+    - setup
+  disabled: false
+  manifests:
+    - path: policies/check-deprecated-apis.yaml
+- name: check-openshift-deprecated-apis
+  categories:
+    - setup
+  controls: 
+    - setup
+  disabled: false
+  manifests:
+    - path: policies/check-openshift-deprecated-apis.yaml
+- name: disallow-jenkins-pipeline-strategy
+  categories:
+    - setup
+  controls: 
+    - setup
+  disabled: false
+  manifests:
+    - path: policies/disallow-jenkins-pipeline-strategy.yaml
+- name: disallow-latest-tag
+  categories:
+    - setup
+  controls: 
+    - setup
+  disabled: false
+  manifests:
+    - path: policies/disallow-latest-tag.yaml
 policySets:
   - description: Kyverno Best Practices
     name: kyverno-best-practices
