--- a/components/apps/kyverno-acm/base/kustomization.yaml
+++ b/components/apps/kyverno-acm/base/kustomization.yaml
@@ -1,5 +1,8 @@
 namespace: acm-policies
 
+commonAnnotations:
+  argocd.argoproj.io/compare-options: IgnoreExtraneous
+
 resources:
 - placementrule.yaml
 - kyverno-acm-policies.yaml
