Allow demo-petclinic as target namespace

--- a/tenants/demo/argocd/root/base/values.yaml
+++ b/tenants/demo/argocd/root/base/values.yaml
@@ -29,6 +29,8 @@ projects:
         server: https://kubernetes.default.svc
       - namespace: 'demo-prod'
         server: https://kubernetes.default.svc
+      - namespace: 'demo-petclinic'
+        server: https://kubernetes.default.svc
       - namespace: 'stackrox'
         server: https://kubernetes.default.svc
     extraFields: |
