Set management state explicitly

--- a/components/apps/loki/instance/base/clusterlogging.yaml
+++ b/components/apps/loki/instance/base/clusterlogging.yaml
@@ -5,6 +5,7 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: instance
 spec:
+  managementState: Managed
   logStore:
     type: lokistack  
     lokistack:
