--- a/clusters/local.home/apps/node-config/base/set-max-pods.yaml
+++ b/clusters/local.home/apps/node-config/base/set-max-pods.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   machineConfigPoolSelector:
     matchLabels:
-      pools.operator.machineconfiguration.openshift.io/worker: ""
+      pools.operator.machineconfiguration.openshift.io/master: ""
   kubeletConfig:
     podsPerCore: 11
     maxPods: 352
