--- a/clusters/local.home/apps/node-config/base/set-max-pods.yaml
+++ b/clusters/local.home/apps/node-config/base/set-max-pods.yaml
@@ -3,6 +3,7 @@ kind: KubeletConfig
 metadata:
   name: set-max-pods 
 spec:
+  autoSizingReserved: true
   machineConfigPoolSelector:
     matchLabels:
       pools.operator.machineconfiguration.openshift.io/master: ""
