Add quotes to see if there is extra whitespace

--- a/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
+++ b/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
@@ -49,9 +49,9 @@ spec:
               echo "Creating secret for $NAMESPACE"
               if [[ `oc get namespace $NAMESPACE 2>/dev/null` ]] ;
               then
-                  echo "Namespace $NAMESPACE exists, checking secret..."
+                  echo "Namespace '$NAMESPACE' exists, checking secret..."
               else
-                  echo "Namespace $NAMESPACE doesn't exist, skipping"
+                  echo "Namespace '$NAMESPACE' doesn't exist, skipping"
                   continue
               fi
 
