--- a/tenants/acs-tokens/base/postsync-create-roxsecrets-sa-rbac.yaml
+++ b/tenants/acs-tokens/base/postsync-create-roxsecrets-sa-rbac.yaml
@@ -19,6 +19,12 @@ rules:
     verbs:
       - get
       - create
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    verbs:
+      - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
