--- a/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
+++ b/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: stackrox
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
