Switch to BeforeHookCreation from HookSucceeded

--- a/components/apps/certificates/base/patch-cluster-api-cert-job.yaml
+++ b/components/apps/certificates/base/patch-cluster-api-cert-job.yaml
@@ -46,7 +46,7 @@ metadata:
   namespace: openshift-config
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
