--- a/components/apps/certificates/base/patch-cluster-wildcard-cert-job.yaml
+++ b/components/apps/certificates/base/patch-cluster-wildcard-cert-job.yaml
@@ -45,7 +45,7 @@ metadata:
   namespace: openshift-ingress
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
