--- a/components/apps/gitops-operator/base/patch-cluster-namespaces-job.yaml
+++ b/components/apps/gitops-operator/base/patch-cluster-namespaces-job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: patch-cluster-namespaces-job
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
