--- a/components/apps/sso/overlays/default/keycloak-migration-job.yaml
+++ b/components/apps/sso/overlays/default/keycloak-migration-job.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: sso
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
