--- a/tenants/product-catalog/namespaces/overlays/cicd/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/cicd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - ../../base
 - cicd-namespace.yaml
 - generate-acs-secret.yaml
+- github-pipeline-scc-rolebinding.yaml
 
 # Patch in namespace for Argo CD that is managing this namespace
 patches:
