--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -84,7 +84,7 @@ applications:
 
   quay-registry:
     # leave disabled unless needed for demo
-    enabled: false
+    enabled: true
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
