--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -9,6 +9,9 @@ patches:
     - op: replace
       path: /spec/template/spec/containers/0/resources/limits/memory
       value: 1Gi
+    - op: replace
+      path: /spec/template/spec/containers/0/resources/requests/memory
+      value: 392Mi
     - op: add
       path: /spec/template/spec/containers/0/args/-
       value: '--clientRateLimitQPS=350'
