--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/generate/config-qnap-example.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/generate/config-qnap-example.yaml
@@ -27,3 +27,5 @@ SUPER_USERS:
     - quayadmin
 FEATURE_DIRECT_LOGIN: true
 FEATURE_USER_INITIALIZE: true
+FEATURE_QUOTA_MANAGEMENT: true
+FEATURE_PROXY_CACHE: true
