--- a/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/ingresscontroller.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/ingresscontroller.yaml
@@ -3,6 +3,8 @@ kind: IngressController
 metadata:
   name: default
   namespace: openshift-ingress-operator
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   defaultCertificate:
     name: openshift-wildcard-certificate
