--- a/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/apiserver.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/apiserver.yaml
@@ -2,6 +2,8 @@ apiVersion: config.openshift.io/v1
 kind: APIServer
 metadata:
   name: cluster
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   servingCerts:
     namedCertificates:
