--- a/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/openshift-api-certificate.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/openshift-api-certificate.yaml
@@ -3,6 +3,8 @@ kind: Certificate
 metadata:
   name: openshift-api
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   secretName: openshift-api-certificate
   issuerRef:
