Add SSA annotation instead of relying on app level SSA flag

--- a/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/apiserver.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/apiserver.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cluster
   annotations:
     argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true
 spec:
   servingCerts:
     namedCertificates:
