--- a/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/ingresscontroller.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/ssa/ingresscontroller.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-ingress-operator
   annotations:
     argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true
 spec:
   defaultCertificate:
     name: openshift-wildcard-certificate
