--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -18,6 +18,8 @@ spec:
   applicationInstanceLabelKey: argocd.argoproj.io/instance
   applicationSet: {}
   kustomizeBuildOptions: "--enable-helm"
+  notifications:
+    enabled: true  
   server:
     insecure: false
     route:
