Add tekton service to notifications

--- a/components/apps/gitops-operator/base/argocd-notifications-cm.yaml
+++ b/components/apps/gitops-operator/base/argocd-notifications-cm.yaml
@@ -1,5 +1,7 @@
 apiVersion: v1
 data:
+  service.webhook.tekton: |
+    url: product-catalog-cicd.el-server-post-prod.svc:8080
   template.app-created: |-
     email:
       subject: Application {{.app.metadata.name}} has been created.
