--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -8,6 +8,9 @@ resources:
 patches:
 - patch: |-
     - op: replace
+      path: /spec/template/spec/containers/0/image
+      value: ghcr.io/kyverno/kyverno:1.8.1
+    - op: replace
       path: /spec/template/spec/containers/0/resources/limits/memory
       value: 2Gi
     - op: replace
