Use tailored profile for ocp4-cis profile

--- a/components/apps/compliance-operator/overlays/scheduled-master/kustomization.yaml
+++ b/components/apps/compliance-operator/overlays/scheduled-master/kustomization.yaml
@@ -6,4 +6,5 @@ namespace: openshift-compliance
 
 resources:
 - github.com/redhat-cop/gitops-catalog/compliance-operator/operator/overlays/release-0.1
-- github.com/redhat-cop/gitops-catalog/compliance-operator/instance/overlays/ocp-cis
+- ocp-cis-tailored-profile.yaml
+- openshift-compliance-scan-setting-binding.yaml
