Update compliance operator to only scan master

--- a/components/apps/compliance-operator/overlays/cis-compliance-master-only/patch-scansetting.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance-master-only/patch-scansetting.yaml
@@ -2,7 +2,7 @@ apiVersion: compliance.openshift.io/v1alpha1
 debug: true
 kind: ScanSetting
 metadata:
-  name: moderate
+  name: cis-compliance
   namespace: openshift-compliance
 roles:
 - master
