--- a/components/apps/compliance-operator/overlays/cis-compliance/ocp-cis-tailored-profile.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance/ocp-cis-tailored-profile.yaml
@@ -7,8 +7,8 @@ metadata:
     argocd.argoproj.io/sync-wave: "1"  
 spec:
   extends: ocp4-cis
-  description: NIST moderate profile
-  title: My modified CIS profile
+  description: Lab CIS profile
+  title: Lab CIS profile
   disableRules:
   - name: ocp4-api-server-encryption-provider-cipher
     rationale: Using letsencrypt certificates, not applicable
