--- a/components/apps/compliance-operator/overlays/cis-compliance/ocp-cis-node-tailored-profile.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance/ocp-cis-node-tailored-profile.yaml
@@ -6,7 +6,7 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "1"  
 spec:
-  extends: ocp4-node-cis
+  extends: ocp4-cis-node
   description: Lab CIS node profile
   title: Lab CIS node profile
   disableRules:
