Change it back to hour

--- a/components/apps/compliance-operator/overlays/cis-compliance/cis-compliance-scansetting.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance/cis-compliance-scansetting.yaml
@@ -30,6 +30,6 @@ roles:
 - worker
 scanTolerations:
 - operator: Exists
-schedule: 10 * * * *
+schedule: * 1 * * *
 showNotApplicable: false
 strictNodeScan: true
